--- a/packages/ckeditor5-build-classic/sample/index.html
+++ b/packages/ckeditor5-build-classic/sample/index.html
@@ -26,9 +26,80 @@
 	<p>You can use this sample to validate whether your <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a> works fine.</p>
 </div>
 
+<script src="https://ckeditor.com/apps/ckfinder/3.4.5/ckfinder.js"></script>
 <script src="../build/ckeditor.js"></script>
 <script>
-	ClassicEditor.create( document.querySelector( '#editor' ) )
+	ClassicEditor.create( document.querySelector( '#editor' ), {
+		toolbar: {
+			// items: [
+			// 	'undo',
+			// 	'redo',
+			// 	'heading',
+			// 	'alignment',
+			// 	'-',
+			// 	'link',
+			// 	'insertTable',
+			// 	'uploadImage',
+			// 	'imageInsert',
+			// 	'mediaEmbed',
+			// 	'cKFinder',
+			// 	'|',
+			// 	'bold',
+			// 	'italic',
+			// 	'underline',
+			// 	'strikethrough',
+			// 	'subscript',
+			// 	'superscript',
+			// 	'horizontalLine',
+			// 	'blockQuote',
+
+			// 	'outdent',
+			// 	'indent',
+
+			// 	'fontBackgroundColor',
+			// 	'fontColor',
+			// 	'fontSize',
+			// 	'fontFamily',
+
+			// 	'bulletedList',
+			// 	'numberedList',
+			// 	'todoList',
+
+			// 	'MathType',
+			// 	'ChemType',
+			// 	'specialCharacters',
+			// 	'code',
+			// 	'codeBlock',
+			// 	'htmlEmbed',
+			// 	'pageBreak',
+			// ],
+			shouldNotGroupWhenFull: true,
+			// viewportTopOffset: window.getViewportTopOffsetConfig()
+		},
+		mathTypeParameters : {
+            serviceProviderProperties : {
+                URI : 'http://localhost/demo/math_type',
+                server : 'php'
+            }
+		},
+		simpleUpload: {
+			// The URL that the images are uploaded to.
+			uploadUrl: 'http://example.com',
+
+			// Enable the XMLHttpRequest.withCredentials property.
+			withCredentials: false,
+
+			// Headers sent along with the XMLHttpRequest to the upload server.
+			// headers: {
+			// 	'X-CSRF-TOKEN': 'CSRF-Token',
+			// 	Authorization: 'Bearer <JSON Web Token>'
+			// }
+		}
+		// ckfinder: {
+		// 	// Open the file manager in the pop-up window.
+		// 	openerMethod: 'popup'
+		// }
+	})
 		.then( editor => {
 			window.editor = editor;
 		} )
