--- a/packages/ckeditor5-build-classic/sample/index.html
+++ b/packages/ckeditor5-build-classic/sample/index.html
@@ -3,17 +3,33 @@
 <head>
 	<meta charset="utf-8">
 	<title>CKEditor 5 – classic editor build – development sample</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css">
 	<style>
 		body {
 			max-width: 800px;
 			margin: 20px auto;
+		}
+		.text-danger {
+			background-color: red;
 		}
 	</style>
 </head>
 <body>
 
 <h1>CKEditor 5 – classic editor build – development sample</h1>
+<h2>Example TeX equations</h2>
+<b>Math</b>
+<pre>\x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}</pre>
+<b>Chem</b>
+<pre>\ce{CH4 + 2 O2 -> CO2 + 2 H2O}</pre>
 
+<h2>Paste from text</h2>
+<b>Display</b>
+<pre>\[ x=\frac{-b\pm\sqrt{b^2-4ac}}{2a} \]</pre>
+<b>Inline</b>
+<pre>\( x+\sqrt{1-x^2} \)</pre>
+
+<h2>Editor</h2>
 <div id="editor">
 	<h2>Sample</h2>
 
@@ -25,22 +41,27 @@
 
 	<p>You can use this sample to validate whether your <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a> works fine.</p>
 </div>
+<button onclick="setHtmlSrc()" style="margin:5px;">Preview</button>
 
-<div id="prv-src">
+<h2>Preview</h2>
+<div id="prv-src" style="border:1px solid #ddd;padding:5px;margin-bottom:10px;">
 NA
 </div>
-<xmp id="html-src">
-No click
-</xmp>
 
-<button onclick="setHtmlSrc()">Set Html Src</button>
+<h2>Data</h2>
+<pre id="html-src" style="word-wrap: break-word; white-space: pre-wrap;border:1px solid #ddd;padding:5px;margin-bottom:10px;"></pre>
 
+
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/katex@0.11.0/dist/contrib/mhchem.min.js"></script>
 <!-- <script src="https://ckeditor.com/apps/ckfinder/3.4.5/ckfinder.js"></script> -->
 <script src="../build/ckeditor.js"></script>
 <script>
 
 	function setHtmlSrc() {
-		document.querySelector('#html-src').innerHTML = editor.getData();
+		document.querySelector('#html-src').innerText = editor.getData();
 		document.querySelector('#prv-src').innerHTML = editor.getData();
 	}
 
@@ -78,54 +99,61 @@ No click
 
 	ClassicEditor.create( document.querySelector( '#editor' ), {
 		// extraPlugins: [VideoUploadAdapterPlugin],
+		// math: {
+		// 	engine: 'katex',
+		// 	outputType: 'span',
+		// 	forceOutputType: false,
+		// 	enablePreview: true,
+		// 	popupClassName:['p-3'],
+		// 	previewClassName: ['bg-light', 'p-2']
+		// },
 		toolbar: {
-			items: [
-				'videoUpload',
-				'undo',
-				'redo',
-				'heading',
-				'alignment',
-				'-',
-				'link',
-				'insertTable',
-				'uploadImage',
-				'imageInsert',
-				'mediaEmbed',
-				'cKFinder',
-				'|',
-				'bold',
-				'italic',
-				'underline',
-				'strikethrough',
-				'subscript',
-				'superscript',
-				'horizontalLine',
-				'blockQuote',
-
-				'outdent',
-				'indent',
-
-				'fontBackgroundColor',
-				'fontColor',
-				'fontSize',
-				'fontFamily',
-
-				'bulletedList',
-				'numberedList',
-				'todoList',
-
-				'MathType',
-				'ChemType',
-				'specialCharacters',
-				'code',
-				'codeBlock',
-				'htmlEmbed',
-				'pageBreak',
-			],
-			shouldNotGroupWhenFull: true,
+			// items: [
+			// 	'heading',
+			// 	'bold',
+			// 	'italic',
+			// 	'underline',
+			// 	'|',
+			// 	'alignment',
+			// 	'bulletedList',
+			// 	'numberedList',
+			// 	'|',
+			// 	'link',
+			// 	'insertTable',
+			// 	'videoUpload',
+			// 	'imageInsert',
+			// 	'mediaEmbed',
+			// 	'|',
+			// 	'outdent',
+			// 	'indent',
+			// 	'blockQuote',
+			// 	'-',
+			// 	'fontBackgroundColor',
+			// 	'fontColor',
+			// 	'fontSize',
+			// 	'fontFamily',
+			// 	'|',
+			// 	'todoList',
+			// 	'strikethrough',
+			// 	'subscript',
+			// 	'superscript',
+			// 	'horizontalLine',
+				
+			// 	'|',
+			// 	'MathType',
+			// 	'ChemType',
+			// 	'specialCharacters',
+			// 	'|',
+			// 	'code',
+			// 	'codeBlock',
+			// 	'htmlEmbed',
+			// 	'undo',
+			// 	'redo',
+			// ],
+			// shouldNotGroupWhenFull: true,
 			// viewportTopOffset: window.getViewportTopOffsetConfig()
 		},
-		mediaEmbed: { previewsInData: true },
+		// mediaEmbed: { previewsInData: true },
 		// mathTypeParameters : {
         //     serviceProviderProperties : {
         //         URI : 'http://localhost/demo/math_type',
@@ -146,44 +174,46 @@ No click
 			// 	Authorization: 'Bearer <JSON Web Token>'
 			// }
 		},
-		video: {
-			upload: {
-				types: ['mp4'],
-				allowMultipleFiles: false,
-			},
-			styles: [
-				'alignLeft', 'alignCenter', 'alignRight'
-			],
+		// video: {
+		// 	upload: {
+		// 		types: ['mp4'],
+		// 		allowMultipleFiles: false,
+		// 	},
+		// 	styles: [
+		// 		'alignLeft', 'alignCenter', 'alignRight'
+		// 	],
 
-			// Configure the available video resize options.
-			resizeOptions: [
-				{
-					name: 'videoResize:original',
-					label: 'Original',
-					icon: 'original'
-				},
-				{
-					name: 'videoResize:50',
-					label: '50',
-					icon: 'medium'
-				},
-				{
-					name: 'videoResize:75',
-					label: '75',
-					icon: 'large'
-				}
-			],
-
-			// You need to configure the video toolbar, too, so it shows the new style
-			// buttons as well as the resize buttons.
-			toolbar: [
-				'videoStyle:alignLeft', 'videoStyle:alignCenter', 'videoStyle:alignRight',
-				'|',
-				'videoResize:50',
-				'videoResize:75',
-				'videoResize:original'
-			]
-		}
+		// 	// // Configure the available video resize options.
+		// 	// resizeOptions: [
+		// 	// 	{
+		// 	// 		name: 'videoResize:original',
+		// 	// 		label: 'Original',
+		// 	// 		icon: 'original',
+		// 	// 		value: null,
+		// 	// 	},
+		// 	// 	{
+		// 	// 		name: 'videoResize:50',
+		// 	// 		label: '50',
+		// 	// 		value: '50',
+		// 	// 		icon: 'medium'
+		// 	// 	},
+		// 	// 	{
+		// 	// 		name: 'videoResize:75',
+		// 	// 		label: '75',
+		// 	// 		icon: 'large',
+		// 	// 		value: '75',
+		// 	// 	}
+		// 	// ],
+		// 	// You need to configure the video toolbar, too, so it shows the new style
+		// 	// buttons as well as the resize buttons.
+		// 	toolbar: [
+		// 		'videoStyle:alignLeft', 'videoStyle:alignCenter', 'videoStyle:alignRight',
+		// 		'|',
+		// 		'videoResize:50',
+		// 		'videoResize:75',
+		// 		'videoResize:original'
+		// 	]
+		// }
 		// ckfinder: {
 		// 	// Open the file manager in the pop-up window.
 		// 	openerMethod: 'popup'
