--- a/packages/ckeditor5-build-classic/sample/index.html
+++ b/packages/ckeditor5-build-classic/sample/index.html
@@ -52,10 +52,10 @@ NA
 <pre id="html-src" style="word-wrap: break-word; white-space: pre-wrap;border:1px solid #ddd;padding:5px;margin-bottom:10px;"></pre>
 
 
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script> -->
+<!-- <script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/katex@0.11.0/dist/contrib/mhchem.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/katex@0.11.0/dist/contrib/mhchem.min.js"></script> -->
 <!-- <script src="https://ckeditor.com/apps/ckfinder/3.4.5/ckfinder.js"></script> -->
 <script src="../build/ckeditor.js"></script>
 <script>
